fixed the overflow issue with landscape mobile views

--- a/_home.scss
+++ b/_home.scss
@@ -26,7 +26,7 @@ body {
     letter-spacing: 2px;
     margin-right: 10%;
     color: $darkerForrest;
-    @include fluid(20, 40, 300);
+    @include fluid(18, 40, 300);
   }
 
   &__items {
@@ -237,9 +237,27 @@ body {
   }
 }
 
-// Landscape
+@media (max-width: 380px) {
+  .navbar {
+    margin-bottom: 2rem;
+  }
+
+  .hero__text {
+    margin-bottom: 15%;
+  }
+}
+
+// Rotated viewport
 
 @media (max-height: 650px) {
+  body {
+    overflow: scroll;
+  }
+
+  .projectsBg {
+    height: 105vw;
+  }
+
   .navbar {
     margin-bottom: 2rem;
   }
@@ -270,5 +288,12 @@ body {
 
   .hamburger {
     display: none;
+  }
+}
+
+@media (max-height: 380px) {
+  .hero__bgCircle {
+    width: 117vw;
+    height: 120vw;
   }
 }
